force-app/main/default/objects/Invoice_Statement__c.object
<CustomObject>
    <fields>
        <fullName>Terms_Covered_Formula__c</fullName>
        <formula>IF( Contains_Yearly_Fee__c =0,


(IF(AND(MONTH(Invoice_Date__c) &gt;7,(OR(MONTH(Invoice_Date__c) &lt;12,(AND(MONTH(Invoice_Date__c)=12,DAY(Invoice_Date__c)&lt;15))))),&quot;Autumn Term of Academic Year &quot;&amp; Invoice_Date_Academic_Year__c ,IF(AND(MONTH(Invoice_Date__c) &lt;8,(OR(MONTH(Invoice_Date__c) &gt;3,(AND(MONTH(Invoice_Date__c)=3,DAY(Invoice_Date__c)&gt;14))))),&quot;Summer Term of Academic Year &quot;&amp; Invoice_Date_Academic_Year__c,&quot;Spring Term of Academic Year&quot;&amp; Invoice_Date_Academic_Year__c))),

(IF(AND(MONTH(Invoice_Date__c) &gt;7,(OR(MONTH(Invoice_Date__c) &lt;12,(AND(MONTH(Invoice_Date__c)=12,DAY(Invoice_Date__c)&lt;15))))),&quot;Autumn, Spring and Summer Term of Academic Year &quot;&amp; Invoice_Date_Academic_Year__c,IF(AND(MONTH(Invoice_Date__c) &lt;8,(OR(MONTH(Invoice_Date__c) &gt;3,(AND(MONTH(Invoice_Date__c)=3,DAY(Invoice_Date__c)&gt;14))))),&quot;Summer Term of Academic Year &quot;&amp; Invoice_Date_Academic_Year__c&amp;&quot; and Autumn, Spring Term of Academic Year &quot;&amp; Invoice_Date_Academic_Year_1__c ,&quot;Spring and Summer Term of Academic Year &quot;&amp; Invoice_Date_Academic_Year__c&amp;&quot; and Autumn Term of Academic Year &quot;&amp; Invoice_Date_Academic_Year_1__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Terms Covered Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_Covered_Local_Language__c</fullName>
        <label>Terms Covered Local Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_Covered_Russian_Yearly_Fees__c</fullName>
        <formula>IF( Contains_Yearly_Fee__c &gt;0,


(IF(AND(MONTH(Invoice_Date__c) &gt;7,(OR(MONTH(Invoice_Date__c) &lt;12,(AND(MONTH(Invoice_Date__c)=12,DAY(Invoice_Date__c)&lt;15))))),&quot;осенний, весенний и летний триместр академического года &quot;&amp; Invoice_Date_Academic_Year__c,IF(AND(MONTH(Invoice_Date__c) &lt;8,(OR(MONTH(Invoice_Date__c) &gt;3,(AND(MONTH(Invoice_Date__c)=3,DAY(Invoice_Date__c)&gt;14))))),&quot;Летний триместр &quot;&amp; Invoice_Date_Academic_Year__c&amp;&quot; учебного года, а также осенний и весенний триместр &quot;&amp; Invoice_Date_Academic_Year_1__c&amp;&quot;  учебного года.&quot;,&quot;Весенний и летний триместр &quot;&amp; Invoice_Date_Academic_Year__c&amp;&quot; учебного года и осенний триместр &quot;&amp; Invoice_Date_Academic_Year_1__c&amp;&quot; учебного года&quot;))),

&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Terms Covered Russian Yearly Fees</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_Covered_Russian__c</fullName>
        <formula>IF( Contains_Yearly_Fee__c =0, 


(IF(AND(MONTH(Invoice_Date__c) &gt;7,(OR(MONTH(Invoice_Date__c) &lt;12,(AND(MONTH(Invoice_Date__c)=12,DAY(Invoice_Date__c)&lt;15))))),&quot;осенний триместр академического года &quot;&amp; Invoice_Date_Academic_Year__c ,IF(AND(MONTH(Invoice_Date__c) &lt;8,(OR(MONTH(Invoice_Date__c) &gt;3,(AND(MONTH(Invoice_Date__c)=3,DAY(Invoice_Date__c)&gt;14))))),&quot;летний триместр академического года &quot;&amp; Invoice_Date_Academic_Year__c,&quot;весенний триместр академического года &quot;&amp; Invoice_Date_Academic_Year__c))), 

&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Terms Covered Russian</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_Covered__c</fullName>
        <label>Terms Covered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount_in_Contract_No_Decimals__c</fullName>
        <formula>IF(Total_Invoice_MINUS_bus_Fees__c &lt; 1000, TEXT(FLOOR(Total_Invoice_MINUS_bus_Fees__c)), 

IF(Total_Invoice_MINUS_bus_Fees__c &lt; 1000000, TEXT(FLOOR(Total_Invoice_MINUS_bus_Fees__c/1000)) &amp; &apos;.&apos; &amp; RIGHT(TEXT(FLOOR(Total_Invoice_MINUS_bus_Fees__c)), 
3), 

IF(Total_Invoice_MINUS_bus_Fees__c &lt; 10000000, TEXT(FLOOR(Total_Invoice_MINUS_bus_Fees__c/1000000)) &amp; &apos;.&apos; &amp; 

MID(text(Total_Invoice_MINUS_bus_Fees__c), 2, 3)&amp;&quot;.&quot;&amp; 



RIGHT(TEXT(FLOOR(Total_Invoice_MINUS_bus_Fees__c)), 3), 



IF(Total_Invoice_MINUS_bus_Fees__c &lt; 100000000, TEXT(FLOOR(Total_Invoice_MINUS_bus_Fees__c/1000000)) &amp; &apos;.&apos; &amp; 

MID(text(Total_Invoice_MINUS_bus_Fees__c), 3, 3)&amp;&quot;.&quot;&amp;

 

MID(text(Total_Invoice_MINUS_bus_Fees__c), 6, 3)



,





&quot;Error:Number Greater Than 999,999,999&quot;) ) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount in Contract No Decimals</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Bus_amount_in_Contract_No_Decimals__c</fullName>
        <formula>IF(Total_Invoice_ONLY_bus_Fees__c &lt; 1000, TEXT(FLOOR(Total_Invoice_ONLY_bus_Fees__c)), 

IF(Total_Invoice_ONLY_bus_Fees__c &lt; 1000000, TEXT(FLOOR(Total_Invoice_ONLY_bus_Fees__c/1000)) &amp; &apos;.&apos; &amp; RIGHT(TEXT(FLOOR(Total_Invoice_ONLY_bus_Fees__c)), 
3), 

IF(Total_Invoice_ONLY_bus_Fees__c &lt; 10000000, TEXT(FLOOR(Total_Invoice_ONLY_bus_Fees__c/1000000)) &amp; &apos;.&apos; &amp; 

MID(text(Total_Invoice_ONLY_bus_Fees__c), 2, 3)&amp;&quot;.&quot;&amp; 



RIGHT(TEXT(FLOOR(Total_Invoice_ONLY_bus_Fees__c)), 3), 



IF(Total_Invoice_ONLY_bus_Fees__c &lt; 100000000, TEXT(FLOOR(Total_Invoice_ONLY_bus_Fees__c/1000000)) &amp; &apos;.&apos; &amp; 

MID(text(Total_Invoice_ONLY_bus_Fees__c), 3, 3)&amp;&quot;.&quot;&amp; 



MID(text(Total_Invoice_ONLY_bus_Fees__c), 6, 3) 



, 





&quot;Error:Number Greater Than 999,999,999&quot;) ) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Bus amount in Contract No Decimals</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Bus_amount_in_Contract__c</fullName>
        <formula>IF(Total_Invoice_ONLY_bus_Fees__c &lt; 1000, TEXT(FLOOR(Total_Invoice_ONLY_bus_Fees__c)), 

IF(Total_Invoice_ONLY_bus_Fees__c &lt; 1000000, TEXT(FLOOR(Total_Invoice_ONLY_bus_Fees__c/1000)) &amp; &apos;.&apos; &amp; RIGHT(TEXT(FLOOR(Total_Invoice_ONLY_bus_Fees__c)), 
3), 

IF(Total_Invoice_ONLY_bus_Fees__c &lt; 10000000, TEXT(FLOOR(Total_Invoice_ONLY_bus_Fees__c/1000000)) &amp; &apos;.&apos; &amp; 

MID(text(Total_Invoice_ONLY_bus_Fees__c), 2, 3)&amp;&quot;.&quot;&amp; 



RIGHT(TEXT(FLOOR(Total_Invoice_ONLY_bus_Fees__c)), 3), 



IF(Total_Invoice_ONLY_bus_Fees__c &lt; 100000000, TEXT(FLOOR(Total_Invoice_ONLY_bus_Fees__c/1000000)) &amp; &apos;.&apos; &amp; 

MID(text(Total_Invoice_ONLY_bus_Fees__c), 3, 3)&amp;&quot;.&quot;&amp; 



MID(text(Total_Invoice_ONLY_bus_Fees__c), 6, 3) 



, 





&quot;Error:Number Greater Than 999,999,999&quot;) ) 
))
&amp;&quot;,00&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Bus amount in Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_MINUS_bus_Fees__c</fullName>
        <label>Total Invoice MINUS bus Fees</label>
        <summarizedField>Line_Item__c.Unit_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.Fee_Type__c</field>
            <operation>notEqual</operation>
            <value>Bus</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Invoice_Statement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_MINUS_bus_fees_x_Exchange__c</fullName>
        <description>Multiplies Total minus bus fees x exchange rate</description>
        <formula>Total_Invoice_MINUS_bus_Fees__c * Exchange_Rate_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Invoice MINUS bus fees x Exchange</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_ONLY_bus_Fees__c</fullName>
        <label>Total Invoice ONLY bus Fees</label>
        <summarizedField>Line_Item__c.Unit_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item__c.Fee_Type__c</field>
            <operation>equals</operation>
            <value>Bus</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item__c.Invoice_Statement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Value_Calculated__c</fullName>
        <label>Total Invoice Value Calculated</label>
        <summarizedField>Line_Item__c.Unit_Price__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Invoice_Statement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Value__c</fullName>
        <formula>Currency__c &amp;&quot; &quot;&amp; 
IF(
Total_Invoice_Value_Calculated__c &gt;= 1000000,
TEXT(FLOOR(Total_Invoice_Value_Calculated__c / 1000000)) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
IF(
Total_Invoice_Value_Calculated__c &gt;= 1000,
RIGHT(TEXT(FLOOR(Total_Invoice_Value_Calculated__c / 1000)), 3) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(Total_Invoice_Value_Calculated__c)), 3) &amp; &quot;.&quot; &amp;
IF(
MOD(Total_Invoice_Value_Calculated__c , 1) * 100 &lt; 10,
&quot;0&quot; &amp; TEXT(ROUND(MOD(Total_Invoice_Value_Calculated__c , 1), 2) * 100),
TEXT(MIN(ROUND(MOD(Total_Invoice_Value_Calculated__c , 1), 2) * 100, 99))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Invoice Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Xero_Payments_Calculated__c</fullName>
        <label>Total Xero Payments Calculated</label>
        <summarizedField>Xero_Payment__c.Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Xero_Payment__c.Status__c</field>
            <operation>notEqual</operation>
            <value>DELETED</value>
        </summaryFilterItems>
        <summaryForeignKey>Xero_Payment__c.Invoice_Statement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Xero_Payments__c</fullName>
        <formula>Xero_Invoice_Currency__c &amp;&quot; &quot;&amp; 
IF( 
Total_Xero_Payments_Calculated__c &gt;= 1000000, 
TEXT(FLOOR(Total_Xero_Payments_Calculated__c / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
Total_Xero_Payments_Calculated__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(Total_Xero_Payments_Calculated__c / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Total_Xero_Payments_Calculated__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
MOD(Total_Xero_Payments_Calculated__c , 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(Total_Xero_Payments_Calculated__c , 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(Total_Xero_Payments_Calculated__c , 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Xero Payments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voided_Deleted__c</fullName>
        <label>Voided/Deleted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Voided</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Xero_Id__c</fullName>
        <inlineHelpText>The value in this field must be unique. If you need to manually link this invoice to a Xero invoice then please send the URL of both, in a spreadsheet, to the relevant member of the group management team</inlineHelpText>
        <label>Xero Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Invoice_Currency__c</fullName>
        <label>Xero Invoice Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Invoice_Date__c</fullName>
        <label>Xero Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Xero_Invoice_Number__c</fullName>
        <label>Xero Invoice Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Invoice_Status__c</fullName>
        <formula>CASE( Xero_Status__c , &quot;DRAFT&quot;, &quot;Draft&quot;, &quot;SUBMITTED&quot;, &quot;Awaiting Approval&quot;, &quot;VOIDED&quot;, &quot;Voided&quot;, &quot;DELETED&quot;, &quot;Deleted&quot;, &quot;PAID&quot;, &quot;Paid&quot;, IF( AND ( Xero_Status__c = &quot;AUTHORISED&quot; , Total_Xero_Payments_Calculated__c = 0 ), &quot;Awaiting Payment&quot;, IF( AND ( Xero_Status__c = &quot;AUTHORISED&quot; , Total_Xero_Payments_Calculated__c &gt; 0 ), &quot;Partially Paid&quot;, &quot;ERROR&quot; ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Xero Invoice Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Invoice_Value__c</fullName>
        <formula>Xero_Invoice_Currency__c &amp;&quot; &quot;&amp; 
IF( 
Xero_Value__c &gt;= 1000000, 
TEXT(FLOOR(Xero_Value__c / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
Xero_Value__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(Xero_Value__c / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Xero_Value__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
MOD(Xero_Value__c , 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(Xero_Value__c , 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(Xero_Value__c , 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Xero Invoice Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Key__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Setup</label>
        <referenceTo>Xero_Key__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Xero_Status__c</fullName>
        <label>Xero Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Value__c</fullName>
        <label>Xero Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Payer__c</columns>
        <columns>Reference__c</columns>
        <columns>Xero_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Xero_Invoice_Number__c</columns>
        <columns>Payer__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Generated_Date__c</columns>
        <columns>Single_Invoice__c</columns>
        <columns>Total_Invoice_Value__c</columns>
        <columns>Owner_School__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Invoices</label>
    </listViews>
    <listViews>
        <fullName>Xero_Sync_Errors</fullName>
        <columns>NAME</columns>
        <columns>Error_Message__c</columns>
        <columns>Xero_Invoice_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Xero_Invoice_Status__c</field>
            <operation>equals</operation>
            <value>ERROR</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/1/2013 12:00 AM</value>
        </filters>
        <label>Xero Sync Errors</label>
    </listViews>
    <nameField>
        <displayFormat>{YY}-{00000}</displayFormat>
        <label>Salesforce UID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_Invalid_School</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    School__c != &quot;Tashkent A&quot;,
    School__c != &quot;Tashkent&quot;,
    School__c != &quot;Moscow A&quot;,
    School__c != &quot;Moscow&quot;,
    School__c != &quot;Sao Paulo&quot;,
    School__c != &quot;Marbella&quot;,
    School__c != &quot;Pamplona&quot;,
    School__c != &quot;Yangon&quot;,
    School__c != &quot;Yangon BL&quot;,
    School__c != &quot;Manila A&quot;, 
    School__c != &quot;Manila&quot;,
    School__c != &quot;Nanjing&quot;,
    School__c != &quot;Kuala Lumpur&quot;,
    School__c != &quot;Brasilia&quot;,
    School__c != &quot;New York&quot;
    )</errorConditionFormula>
        <errorMessage>The school you have entered is invalid. You should not attempt to change the value in this field manually.</errorMessage>
    </validationRules>
</CustomObject>